--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Hi, I'm Wayde
+subtitle: I just learn to taste Tea. Come with me.
 ---
 
 <div class="posts-list">
