--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Hi, I'm Wayde
-subtitle: I just learn to taste Tea. Come with me.
+title: Hakuna Matata
+subtitle: It's a funny place, trust me. :)
 ---
 
 <div class="posts-list">
